# PTC

./: CMakeLists.txt  README.md  ptc
broker/: CMakeLists.txt
broker/inc/: mqtt_broker.h  mqtt_broker_utils.h  mqtt_client_info.h  mqtt_subscribe_client.h  subscriber.h  subscription.h  tcp_client_info.h  tcp_connection.h  topic.hh
broker/src/: main.c  mqtt_broker.c  mqtt_broker_utils.c  subscription.c  tcp_connection.c
inc/: mqtt_client.h
klient/: CMakeLists.txt
klient/inc/: mqtt_client.h  mqtt_utils.h  publish.h  subscribe.h  tcp_connection.h  topic.hh
klient/src/: main.c  mqtt_client.c  tcp_connection.c
klient_subscribe/inc/: mqtt_client.h  subscribe.h
klient_subscribe/src/: main.c  mqtt_client.c  mqtt_utils.c
src/: main.c  mqtt_client.c
